# EventSphere-API

./: .env.example  .gitignore  README.md  config.py  endpoints_doc.md  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run.py  seed_data.py  spec copy.md  test_certificate.py
app/: __init__.py  blueprints.py  context_processors.py  docs.py  extensions.py  seed.py
app/core/api/: __init__.py  error_handlers.py
app/core/api/v1/: __init__.py
app/core/api/v1/admin/: __init__.py
app/core/api/v1/admin/controller/: __init__.py  attendance.py  certificate.py  event.py  feedback.py  (+2 more)
app/core/api/v1/public/: __init__.py
app/core/web/: __init__.py
app/enums/: auth.py
app/models/: __init__.py  attendance.py  calendar_sync.py  certificate.py  event.py  feedback.py  media.py  payment.py  registration.py  user.py  waitlist.py
app/schemas/: __init__.py  attendance.py  auth.py  certificate.py  common.py  event.py  feedback.py  media.py  registration.py
app/static/: swagger.json
app/templates/api/: index.html
app/templates/api/base/: base.html
app/templates/mail/: password-reset.html  send-code.html
app/utils/certificate_generator/: __init__.py
app/utils/decorators/: auth.py
app/utils/emailing/: service.py
app/utils/helpers/: http_response.py  settings.py  user.py
app/utils/hooks/: after_request.py  before_request.py
app/utils/media_service/: __init__.py  constants.py  processors.py  uploaders.py  utils.py  validators.py
app/utils/payments/: payment_manager.py  wallet.py
app/utils/verification/: password_reset.py
docs/: README.md  __init__.py  config.py  example.py  setup.py
tests/: conftest.py
(+25 files in other folders)
